--- a/roles/salt-repo/tasks/main.yml
+++ b/roles/salt-repo/tasks/main.yml
@@ -1,8 +1,10 @@
 ---
-- fail: 
+- name: test var salt_version
+  fail: 
     msg:
-      unsupported salt_version {{ salt_version }}
+      Unsupported salt_version {{ salt_version }}
   when: salt_version not in salt_versions
 
 
 - include: "{{ ansible_distribution }}.yml"
+
