--- a/roles/salt-repo/tasks/CentOS.yml
+++ b/roles/salt-repo/tasks/CentOS.yml
@@ -1,5 +1,6 @@
 ---
-- fail:
+- name: test var centos_version
+  fail:
     msg:
       unsupported centos_version {{ ansible_distribution_major_version }}
   when: ansible_distribution_major_version not in salt_centos_versions
@@ -18,3 +19,4 @@
 - name: update yum cache
   shell: yum clean expire-cache
   when: result_repo|changed
+
