--- a/roles/salt-repo/tasks/RedHat.yml
+++ b/roles/salt-repo/tasks/RedHat.yml
@@ -1,5 +1,6 @@
 ---
-- fail:
+- name: test var redhat_version
+  fail:
     msg:
       unsupported redhat_version {{ ansible_distribution_major_version }}
   when: ansible_distribution_major_version not in salt_redhat_versions
@@ -16,5 +17,6 @@
 
 
 - name: update yum cache
-  shell: yum clean all
+  shell: yum clean expire-cache
   when: result_repo|changed
+
