--- a/roles/salt-minion/defaults/main.yml
+++ b/roles/salt-minion/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-salt_minion.id: '' 
-salt_minion.master: '' 
-salt_minion.port: 4506
-salt_minion.hash_type: sha256
+salt_minion_id: 
+salt_minion_master: salt-master
+salt_minion_master_port: 4506
+salt_minion_hash_type: sha256
+salt_minion_ipv6: False
