--- a/roles/salt-minion/tasks/main.yml
+++ b/roles/salt-minion/tasks/main.yml
@@ -2,13 +2,13 @@
 - fail: 
     msg: 
       undefined salt_minion.master
-  when: salt_minion['master'] == ''
+  when: salt_minion.master == ''
 
 
 - fail:
     msg:
       undefined salt_minion.id
-  when: salt_minion['id'] == ''
+  when: salt_minion.id == ''
 
 
 - name: install pkgs
