--- a/roles/salt-repo/defaults/main.yml
+++ b/roles/salt-repo/defaults/main.yml
@@ -5,6 +5,7 @@
 #
 # salt_versions: 
 #   - latest
+#   - 2016.11
 #   - 2016.3
 #   - 2015.8
 #   - archive/2015.8.1
@@ -25,6 +26,8 @@
 #   - archive/2016.3.2
 #   - archive/2016.3.3
 #   - archive/2016.3.4
+#   - archive/2016.11.0
+#   - archive/2016.11.1
 
 salt_version: latest
 
